权限系统全新升级

--- a/views/server/layout.jade
+++ b/views/server/layout.jade
@@ -132,7 +132,7 @@ html.no-js
                             a(href='#{adminDir}')
                                 i.fa.fa-dashboard
                                 span 首页
-                        if (User && (Roles.indexOf('admin') > -1 || Actions.indexOf('content') > -1))
+                        if (User && (Roles.indexOf('admin') > -1 || Actions.indexOf('CONTENT_INDEX') > -1))
                             li.sub-menu(class=Path === 'content' ? 'active' : '')
                                 a(href='javascript:void(0);')
                                     i.fa.fa-file-text
@@ -143,7 +143,7 @@ html.no-js
                                         a(href='#{adminDir}/content') 内容列表
                                     li(class=Menu === 'add' ? 'active' : '')
                                         a(href='#{adminDir}/content/add') 添加内容
-                        if (User && (Roles.indexOf('admin') > -1 || Actions.indexOf('category') > -1))
+                        if (User && (Roles.indexOf('admin') > -1 || Actions.indexOf('CATEGORY_INDEX') > -1))
                             li.sub-menu(class=Path === 'category' ? 'active' : '')
                                 a(href='javascript:void(0);')
                                     i.fa.fa-th
@@ -154,10 +154,10 @@ html.no-js
                                         a(href='#{adminDir}/category') 分类列表
                                     li(class=Menu === 'add' ? 'active' : '')
                                         a(href='#{adminDir}/category/add') 添加分类
-                        if (User && (Roles.indexOf('admin') > -1 || Actions.indexOf('comment') > -1))
+                        if (User && (Roles.indexOf('admin') > -1 || Actions.indexOf('COMMENT_INDEX') > -1))
                             li(class=Path === 'comment' ? 'active' : '')
                                 a(href='#{adminDir}/comment') 评论列表
-                        if (User && (Roles.indexOf('admin') > -1 || Actions.indexOf('user') > -1))
+                        if (User && (Roles.indexOf('admin') > -1 || Actions.indexOf('USER_INDEX') > -1))
                             li.sub-menu(class=Path === 'user' ? 'active' : '')
                                 a(href='javascript:void(0);')
                                     i.fa.fa-users
@@ -168,7 +168,7 @@ html.no-js
                                         a(href='#{adminDir}/user') 用户列表
                                     li(class=Menu === 'add' ? 'active' : '')
                                         a(href='#{adminDir}/user/add') 添加用户
-                        if (User && (Roles.indexOf('admin') > -1 || Actions.indexOf('role') > -1))
+                        if (User && (Roles.indexOf('admin') > -1 || Actions.indexOf('ROLE_INDEX') > -1))
                             li.sub-menu(class=Path === 'role' ? 'active' : '')
                                 a(href='javascript:void(0);')
                                     i.fa.fa-unlock-alt
@@ -179,7 +179,7 @@ html.no-js
                                         a(href='#{adminDir}/role') 角色列表
                                     li(class=Menu === 'add' ? 'active' : '')
                                         a(href='#{adminDir}/role/add') 添加角色
-                        if (User && (Roles.indexOf('admin') > -1 || Actions.indexOf('file') > -1))
+                        if (User && (Roles.indexOf('admin') > -1 || Actions.indexOf('FILE_INDEX') > -1))
                             li.sub-menu(class=Path === 'file' ? 'active' : '')
                                 a(href='javascript:void(0);')
                                     i.fa.fa-folder-open
@@ -190,7 +190,7 @@ html.no-js
                                         a(href='#{adminDir}/file') 文件列表
                                     li(class=Menu === 'add' ? 'active' : '')
                                         a(href='#{adminDir}/file/add') 添加文件
-                        if (User && Roles.indexOf('admin') > -1)
+                        if (User && Roles.indexOf('admin') > -1 || Actions.indexOf('NOTIFICATION_INDEX') > -1)
                             li.sub-menu(class=Path === 'notification' ? 'active' : '')
                                 a(href='javascript:void(0);')
                                     i.fa.fa-envelope
@@ -201,7 +201,7 @@ html.no-js
                                         a(href='#{adminDir}/notification') 已收到
                                     li(class=Menu === 'sent' ? 'active' : '')
                                         a(href='#{adminDir}/notification/sent') 已发出
-                        if (User && Roles.indexOf('admin') > -1)
+                        if (User && Roles.indexOf('admin') > -1 || Actions.indexOf('MESSAGE_INDEX') > -1)
                             li.sub-menu(class=Path === 'message' ? 'active' : '')
                                 a(href='javascript:void(0);')
                                     i.fa.fa-comment
@@ -210,10 +210,10 @@ html.no-js
                                 ul
                                     li(class=Menu === 'list' ? 'active' : '')
                                         a(href='#{adminDir}/message') 留言列表
-                        if (User && Roles.indexOf('admin') > -1)
+                        if (User && Roles.indexOf('admin') > -1 || Actions.indexOf('PAGE_INDEX') > -1)
                             li.sub-menu(class=Path === 'page' ? 'active' : '')
                                 a(href='#{adminDir}/page') 页面列表
-                        if (User && Roles.indexOf('admin') > -1)
+                        if (User && Roles.indexOf('admin') > -1 || Actions.indexOf('TAG_INDEX') > -1)
                             li.sub-menu(class=Path === 'tag' ? 'active' : '')
                                 a(href='javascript:void(0);')
                                     i.fa.fa-tags
