--- a/views/server/me/item.jade
+++ b/views/server/me/item.jade
@@ -62,19 +62,18 @@ block content
                             .col-md-2
                                 strong 权限
                             .col-md-10
-                                | #{user._actions}
-                    //li.list-group-item
-                        .row
-                            .col-md-2
-                                strong Salt
-                            .col-md-10
-                                | #{user.salt}
-                    //li.list-group-item
-                        .row
-                            .col-md-2
-                                strong Hashed_password
-                            .col-md-10
-                                | #{user.hashed_password}
+                                - each action in ACTIONS
+                                    - var result = [];
+                                    - each item in action.actions
+                                        if (user._actions.indexOf(item.value) > -1)
+                                            - result.push(item);
+                                    if (result.length > 0)
+                                        | #{action.name}
+                                        ul
+                                            - each obj in result
+                                                li 
+                                                    label
+                                                        | #{obj.name} (#{obj.description})
                     li.list-group-item
                         .row
                             .col-md-2
