--- a/views/server/role/add.jade
+++ b/views/server/role/add.jade
@@ -9,7 +9,6 @@ block content
                     input.form-control(name='name')
                 .form-group
                     label 权限
-                    //input.form-control(name='actions', placeholder='逗号分割')
                     h4 选择权限
                     - each action in ACTIONS
                         | #{action.name}
@@ -17,9 +16,8 @@ block content
                             - each item in action.actions
                                 li.list-group-item
                                     label
-                                        input(name='actions', type='checkbox', value='#{item.value}')
+                                        input(name='actions[]', type='checkbox', value='#{item.value}')
                                         | #{item.name} (#{item.description})
-                | #{core.getActions(User)}
                 .form-group
                     label 描述
                     textarea.form-control(name='description', rows='8')
