content clear files

--- a/views/server/content/add.jade
+++ b/views/server/content/add.jade
@@ -145,6 +145,7 @@ block foot-js
                             type: 'success'
                         });
                         $form[0].reset();
+                        $('#J_gallery').empty();
                     } else {
                         messenger.update({
                             message: '发布失败',
