--- a/views/server/user/item.jade
+++ b/views/server/user/item.jade
@@ -6,34 +6,60 @@ block content
             .panel.panel-default
                 .panel-heading
                     | 用户信息
-                table.table.table-bordered
-                    thead
-                        tr
-                            th ID
-                            th 名称
-                            th 用户名
-                            th 角色
-                            th 创建人
-                            th Salt
-                            th Hashed_password
-                    tbody
-                        tr
-                            td #{user.id}
-                            td #{user.name}
-                            td #{user.username}
-                            td
-                                if (user.roles)
-                                    - each role in user.roles
-                                        span.label.label-info
-                                            | #{role.name}
-                                        | 
-                            td
-                                if (user.author)
-                                    | #{user.author.username}
-                                else
-                                    | 无
-                            td #{user.salt}
-                            td #{user.hashed_password}
+                .panel-body
+                    .form-horizontal
+                        .form-group
+                            label.col-sm-2.control-label ID
+                            .col-sm-10 
+                                p.form-control-static #{user.id}
+                        .form-group
+                            label.col-sm-2.control-label 名称
+                            .col-sm-10 
+                                p.form-control-static #{user.name}
+                        .form-group
+                            label.col-sm-2.control-label 用户名
+                            .col-sm-10 
+                                p.form-control-static #{user.username}
+                        .form-group
+                            label.col-sm-2.control-label Email
+                            .col-sm-10 
+                                p.form-control-static #{user.email}
+                        .form-group
+                            label.col-sm-2.control-label 手机号
+                            .col-sm-10 
+                                p.form-control-static #{user.mobile || '无'}
+                        .form-group
+                            label.col-sm-2.control-label 性别
+                            .col-sm-10 
+                                p.form-control-static #{user.gender || '无'}
+                        .form-group
+                            label.col-sm-2.control-label 角色
+                            .col-sm-10 
+                                p.form-control-static
+                                    if (user.roles)
+                                        - each role in user.roles
+                                            span.label.label-info
+                                                | #{role.name}
+                        .form-group
+                            label.col-sm-2.control-label 创建人
+                            .col-sm-10 
+                                p.form-control-static
+                                    if (user.author)
+                                        | #{user.author.username}
+                                    else
+                                        | 无
+                        .form-group
+                            label.col-sm-2.control-label 注册时间
+                            .col-sm-10
+                                p.form-control-static #{moment(user.created).format('LLL')}
+                        .form-group
+                            label.col-sm-2.control-label 上次登录时间
+                            .col-sm-10
+                                p.form-control-static #{moment(user.last_login_date).format('LLL')}
+                        .form-group
+                            label.col-sm-2.control-label 上次登录IP
+                            .col-sm-10
+                                p.form-control-static #{user.last_login_ip}
 
     //.row
         .col-md-12
