--- a/views/server/index.jade
+++ b/views/server/index.jade
@@ -14,47 +14,54 @@ block content
                             span #{role.actions && role.actions.indexOf('admin') > -1}
     .row
         .col-md-3.col-sm-6
-            .dashboard-tile.detail.tile-turquoise
-                .content
-                    h1.text-left.timer(data-from='0', data-to='180', data-speed='2500') #{data.content}
-                    p 内容
-                .icon
-                    i.fa.fa-folder
+            a(href="#{adminDir}/content/")
+                .dashboard-tile.detail.tile-turquoise
+                    .content
+                        h1.text-left.timer(data-from='0', data-to='180', data-speed='2500') #{data.content}
+                        p 内容
+                    .icon
+                        i.fa.fa-folder
         .col-md-3.col-sm-6
-            .dashboard-tile.detail.tile-red
-                .content
-                    h1.text-left.timer(data-from='0', data-to='180', data-speed='2500') #{data.category}
-                    p 分类
-                .icon
-                    i.fa.fa-sitemap
+            a(href="#{adminDir}/category/")
+                .dashboard-tile.detail.tile-red
+                    .content
+                        h1.text-left.timer(data-from='0', data-to='180', data-speed='2500') #{data.category}
+                        p 分类
+                    .icon
+                        i.fa.fa-sitemap
         .col-md-3.col-sm-6
-            .dashboard-tile.detail.tile-blue
-                .content
-                    h1.text-left.timer(data-from='0', data-to='180', data-speed='2500') #{data.comment}
-                    p 评论
-                .icon
-                    i.fa.fa-comments
+            a(href="#{adminDir}/comment/")
+                .dashboard-tile.detail.tile-blue
+                    .content
+                        h1.text-left.timer(data-from='0', data-to='180', data-speed='2500') #{data.comment}
+                        p 评论
+                    .icon
+                        i.fa.fa-comments
         .col-md-3.col-sm-6
-            .dashboard-tile.detail.tile-turquoise
-                .content
-                    h1.text-left.timer(data-from='0', data-to='56', data-speed='2500') #{data.user}
-                    p 用户
-                .icon
-                    i.fa.fa-users
+            a(href="#{adminDir}/user/")
+                .dashboard-tile.detail.tile-turquoise
+                    .content
+                        h1.text-left.timer(data-from='0', data-to='56', data-speed='2500') #{data.user}
+                        p 用户
+                    .icon
+                        i.fa.fa-users
         .col-md-3.col-sm-6
-            .dashboard-tile.detail.tile-blue
-                .content
-                    h1.text-left.timer(data-from='0', data-to='32', data-speed='2500') #{data.role}
-                    p 角色
-                .icon
-                    i.fa.fa.fa-key
+            a(href="#{adminDir}/role/")
+                .dashboard-tile.detail.tile-blue
+                    .content
+                        h1.text-left.timer(data-from='0', data-to='32', data-speed='2500') #{data.role}
+                        p 角色
+                    .icon
+                        i.fa.fa.fa-key
+
         .col-md-3.col-sm-6
-            .dashboard-tile.detail.tile-purple
-                .content
-                    h1.text-left.timer(data-to='105', data-speed='2500') #{data.file}
-                    p 文件
-                .icon
-                    i.fa.fa-file
+            a(href="#{adminDir}/file/")
+                .dashboard-tile.detail.tile-purple
+                    .content
+                        h1.text-left.timer(data-to='105', data-speed='2500') #{data.file}
+                        p 文件
+                    .icon
+                        i.fa.fa-file
     
 
 block foot-js
