--- a/views/server/category/add.jade
+++ b/views/server/category/add.jade
@@ -8,8 +8,13 @@ block content
                     label 名称
                     input.form-control(name='name')
                 .form-group
-                    label 标记(别名)
+                    label 标记(别名，英文字符，可选)
                     input.form-control(name='flag')
+                //.form-group
+                    label 父分类
+                    select.form-control(name='parent')
+                        option(value='') 请选择
+                        option(value='111') 日记
                 .form-group
                     label 描述
                     textarea.form-control(name='description', rows='8')
