--- a/views/server/me/item.jade
+++ b/views/server/me/item.jade
@@ -15,7 +15,7 @@ block content
                             .col-md-10
                                 a(href='#{adminDir}/me/edit', title='编辑', style='line-height: 100px;')
                                     span.glyphicon.glyphicon-edit
-                    li.list-group-item
+                    //li.list-group-item
                         .row
                             .col-md-2
                                 strong 用户ID
