--- a/views/app/info.jade
+++ b/views/app/info.jade
@@ -2,7 +2,7 @@ extends layout
 
 block content
     .container(style='margin-top: 20px;')
-        pre #{message}
+        .alert.alert-success #{message}
 
 //- status
 //- message
