--- a/views/app/layout.jade
+++ b/views/app/layout.jade
@@ -38,6 +38,7 @@ html
                     //a.cms-nav-item(class='',href='/?key=css') CSS
                     //a.cms-nav-item(class=Path === 'content' ? 'active' : '',href='/content') 内容
                     //a.cms-nav-item(class=Path === 'comment' ? 'active' : '',href='/comment') 评论
+                    a.cms-nav-item(class=Path === 'contact' ? 'active' : '',href='/contact') 留言
         block content
         script(src='/assets/app/js/vendor/jquery-2.1.1.min.js')
         script(src='/assets/plugins/bootstrap/js/bootstrap.min.js')
