--- a/views/app/contact.jade
+++ b/views/app/contact.jade
@@ -1,26 +1,31 @@
 extends layout
+block head-css
+    style.
+        .form-control{
+            max-width: 500px;
+        }
 
 block content
-    .container(style='margin-top:10px;')
+    .container(style='margin-top:30px;')
         form(action='', method='POST', role='form')
-            legend 联系我们
             .form-group
-                label(for='') 姓名
-                input.form-control(type='text', placeholder='', name='name')
+                label.control-label(for='') 名字
+                input.form-control(type='text', placeholder='请输入姓名', name='name')
             .form-group
-                label(for='') 手机
-                input.form-control(type='text', placeholder='', name='mobile')
+                label.control-label(for='') 手机
+                input.form-control(type='text', placeholder='请输入手机号', name='mobile')
             .form-group
-                label(for='') 邮箱
-                input.form-control(type='text', placeholder='', name='email')
-            .form-group
+                label.control-label(for='') 邮箱
+                input.form-control(type='text', placeholder='请输入邮箱', name='email')
+            //.form-group
                 label(for='') 通讯地址
                 input.form-control(type='text', placeholder='', name='address')
             .form-group
-                label(for='') 留言
-                textarea.form-control(placeholder='', name='content')
-            input(type='hidden', name='_csrf', value='#{token}')
-            button.btn.btn-primary(type='submit') 提交 
+                label.control-label(for='') 留言
+                textarea.form-control(placeholder='留言内容', name='content', rows='5')
+                input(type='hidden', name='_csrf', value='#{token}')
+            .form-group
+                button.btn.btn-primary(type='submit') 提交 
             
             
 block foot-js
