--- a/views/app/contact.jade
+++ b/views/app/contact.jade
@@ -11,10 +11,10 @@ block content
             .form-group
                 label.control-label(for='') 名字
                 input.form-control(type='text', placeholder='请输入姓名', name='name')
-            .form-group
+            //.form-group
                 label.control-label(for='') 手机
                 input.form-control(type='text', placeholder='请输入手机号', name='mobile')
-            .form-group
+            //.form-group
                 label.control-label(for='') 邮箱
                 input.form-control(type='text', placeholder='请输入邮箱', name='email')
             //.form-group
