--- a/views/app/page/item.jade
+++ b/views/app/page/item.jade
@@ -4,7 +4,7 @@ block content
     .container
         .row
             .col-md-12
-                div #{page.content}
+                div !{page.content}
     
 block foot-js
     
