--- a/views/server/content/edit.jade
+++ b/views/server/content/edit.jade
@@ -8,6 +8,18 @@ block content
                 .form-group
                     label 标题
                     input.form-control(name='title', value='#{content.title}')
+                if (categorys && categorys.length > 0)
+                    .form-group
+                        label 分类
+                        select.form-control.input-sm(name='category')
+                            option(value='') 请选择
+                            - each category in categorys
+                                if ((category._id + '') === (content.category + ''))
+                                    option(value='#{category._id}', selected)
+                                        | #{category.name}
+                                else
+                                    option(value='#{category._id}')
+                                        | #{category.name}
                 .form-group
                     label 图集
                     .gallery#J_gallery
@@ -27,17 +39,6 @@ block content
                         div.progress-bar.progress-bar-success
                     #J_preview.preview
                        
-                .form-group
-                    label 分类
-                    select.form-control.input-sm(name='category')
-                        option(value='') 请选择
-                        - each category in categorys
-                            if ((category._id + '') === (content.category + ''))
-                                option(value='#{category._id}', selected)
-                                    | #{category.name}
-                            else
-                                option(value='#{category._id}')
-                                    | #{category.name}
                 .form-group
                     label 内容
                     textarea.form-control(name='content', rows='20') #{content.content}
