--- a/views/app/layout.jade
+++ b/views/app/layout.jade
@@ -50,7 +50,7 @@ html
         script(src='/assets/app/js/vendor/mustache.js')
         script(src='/assets/app/js/vendor/moment-with-langs.js')
         if (NODE_ENV === 'development')
-            script(src='//localhost:8080/public/main.js')
+            script(src='//127.0.0.1:8080/public/main.js')
         else
             script(src='/build/main.js')
         block foot-js
