--- a/public/assets/app/css/style.css
+++ b/public/assets/app/css/style.css
@@ -163,6 +163,9 @@ a.btn-danger{
 .post-content{
     padding: 20px;
 }
+.post-content img{
+    max-width: 100%;
+}
 /*.img-responsive{
     display: block;
     max-width: 100%;
