--- a/public/assets/app/css/style.css
+++ b/public/assets/app/css/style.css
@@ -77,6 +77,10 @@ a:active{
     max-width: 100%;
     max-height: 100%;
 }
+.gallery-item video{
+    max-width: 100%;
+    max-height: 100%;
+}
 .gallery-remove{
     position: absolute;
     right: 2px;
@@ -246,4 +250,9 @@ a.btn-danger{
 }
 .form-control{
     border-radius: 0;
+}
+.video-content{
+    display: flex;
+    align-items: center;
+    justify-content: center;
 }
