--- a/views/app/layout.jade
+++ b/views/app/layout.jade
@@ -3,7 +3,7 @@ html
     head
         title #{title}
         meta(name="viewport",content="width=device-width, initial-scale=1.0, minimum-scale=1.0, maximum-scale=1.0, user-scalable=0")
-        if (NODE_ENV === 'development')
+        if (env === 'development')
             link(rel='stylesheet', href='//localhost:8080/public/main.css')
         else
             link(rel='stylesheet', href='/build/main.css')
@@ -49,11 +49,13 @@ html
         script(src='/assets/plugins/bootstrap3-dialog/js/bootstrap-dialog.min.js')
         script(src='/assets/app/js/vendor/mustache.js')
         script(src='/assets/app/js/vendor/moment-with-langs.js')
-        if (NODE_ENV === 'development')
+        if (env === 'development')
             script(src='//127.0.0.1:8080/public/main.js')
         else
             script(src='/build/main.js')
         block foot-js
-        //script.
-            var _bdhmProtocol = (("https:" == document.location.protocol) ? " https://" : " http://");
-            document.write(unescape("%3Cscript src='" + _bdhmProtocol + "hm.baidu.com/h.js%3F3a258fabccde554fc44cba951692bdde' type='text/javascript'%3E%3C/script%3E"));
+        if (env !== 'development')
+            span(style='display: none;')
+                script.
+                    var _bdhmProtocol = (("https:" == document.location.protocol) ? " https://" : " http://");
+                    document.write(unescape("%3Cscript src='" + _bdhmProtocol + "hm.baidu.com/h.js%3F3a258fabccde554fc44cba951692bdde' type='text/javascript'%3E%3C/script%3E"));
