--- a/views/app/content/item.jade
+++ b/views/app/content/item.jade
@@ -1,5 +1,6 @@
 extends ../layout
 block head-css
+    <link rel="stylesheet" href="/assets/plugins/highlight/styles/tomorrow-night.css">
     <link rel="stylesheet" href="/assets/plugins/blueimp-gallery/css/blueimp-gallery.css">
     <link rel="stylesheet" href="/assets/plugins/blueimp-gallery/css/blueimp-gallery-indicator.css">
 block content
@@ -114,11 +115,18 @@ block content
         a.play-pause
         ol.indicator
 block foot-js
+    script(src='/assets/plugins/highlight/highlight.pack.js')
+
     script(src='/assets/plugins/blueimp-gallery/js/jquery.blueimp-gallery.min.js')
     script(src='/assets/app/js/vendor/lazyload.min.js')
     script.
         moment.lang('zh-cn');
         var token = '#{token}';
+        $(document).ready(function() {
+          $('pre code').each(function(i, block) {
+            hljs.highlightBlock(block);
+          });
+        });
         $('.gallery a').on('click', function(e) {
             var $img = $(this);
             blueimp.Gallery($('.gallery a'), {
