--- a/views/server/content/add.jade
+++ b/views/server/content/add.jade
@@ -1,5 +1,6 @@
 extends ../layout
 block head-css
+    link(rel='stylesheet', href='/assets/plugins/mditor/mditor.min.css')
     link(rel='stylesheet', href='/assets/plugins/upload/css/jquery.fileupload.css')
 block content
     .row
@@ -28,7 +29,7 @@ block content
                         div.progress-bar.progress-bar-default
                 .form-group
                     label 内容
-                    textarea.form-control(name='content', rows='20')
+                    textarea.form-control#J_editor(name='content', rows='20', style='background-color: #fff; border: none;')
                 .form-group
                     label 标签
                     div
@@ -48,6 +49,8 @@ block content
                 span.fa.fa-times-circle
 
 block foot-js
+    script(src='/assets/plugins/mditor/mditor.min.js')
+
     script(src='/assets/plugins/jquery.form/jquery.form.js')
     script(src='/assets/plugins/upload/js/vendor/jquery.ui.widget.js')
     script(src='/assets/plugins/load-image/js/load-image.min.js')
@@ -66,6 +69,8 @@ block foot-js
             theme: 'flat'
         };
         $(function () {
+            var mditor =  Mditor.fromTextarea(document.getElementById('J_editor'));
+            mditor.split = false;
             $('#J_select_tags').chosen({max_selected_options: 5, no_results_text: '没有匹配到'})
             $('#J_select_tags').on('change', function(event, params) {
                 console.log(event, params)
@@ -148,6 +153,7 @@ block foot-js
                             type: 'success'
                         });
                         $form[0].reset();
+                        mditor.editor.value = ''
                         $('#J_gallery').empty();
                     } else {
                         messenger.update({
